compiler/src/testsuite/extensions/modules/bad/bad_import_2.bl
use mod;

int main() {
    mod::idontexist();
    return 0;
}